Changed default text

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
                             <p class="header__accordion-title">Calculators</p>
                             <div class="header__accordion-content">
                                 <div>
-                                    <a href="rd-calculator.html" class="header__accordion-content-title">RD Calculator</a>
-                                    <a href="fd-calculator.html" class="header__accordion-content-title">FD Calculator</a>
-                                    <a href="emi-calculator.html" class="header__accordion-content-title">EMI Calculator</a>
+                                    <a href="rd-calculator.html" class="header__accordion-content-title">RD
+                                        Calculator</a>
+                                    <a href="fd-calculator.html" class="header__accordion-content-title">FD
+                                        Calculator</a>
+                                    <a href="emi-calculator.html" class="header__accordion-content-title">EMI
+                                        Calculator</a>
                                 </div>
                             </div>
                             <img class="header__accordion-chevron" src="assets/icons/chevron.svg" alt="chevron">
@@ -111,9 +114,10 @@
                             <h2 class="card__title">Emergency Fund</h2>
                             <img class="card__icon" src="assets/icons/money.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Build a financial safety net to handle unexpected expenses like medical
+                            emergencies or job loss. A well-funded emergency account ensures peace of mind and financial
+                            stability. Investing systematically in an emergency fund keeps you prepared for life's
+                            uncertainties.
                         </p>
                     </div>
                 </div>
@@ -123,9 +127,9 @@
                             <h2 class="card__title">House</h2>
                             <img class="card__icon" src="assets/icons/house.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Invest in your dream home and secure a place for your family to grow.
+                            Planning early helps you save for a down payment and reduce future loan burdens. A house is
+                            not just a property—it's a long-term asset and a symbol of stability.
                         </p>
                     </div>
                 </div>
@@ -135,9 +139,9 @@
                             <h2 class="card__title">Car</h2>
                             <img class="card__icon" src="assets/icons/car.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Save for your desired car to enhance your lifestyle and convenience. Smart
+                            financial planning helps you avoid hefty loans and enjoy your ride stress-free. Investing in
+                            your vehicle ensures financial flexibility and fewer compromises.
                         </p>
                     </div>
                 </div>
@@ -147,9 +151,9 @@
                             <h2 class="card__title">Kids</h2>
                             <img class="card__icon" src="assets/icons/kids.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Secure your children's future by investing in their education, healthcare,
+                            and other needs. Early planning ensures they have access to the best opportunities. Building
+                            a fund for your kids provides a solid foundation for their growth and dreams.
                         </p>
                     </div>
                 </div>
@@ -159,9 +163,10 @@
                             <h2 class="card__title">Vacation</h2>
                             <img class="card__icon" src="assets/icons/plane.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Plan your dream vacation. Investing early lets
+                            you explore the world and create unforgettable memories guilt-free. A well-planned travel
+                            fund ensures you can enjoy your trips without dipping into savings or sacrificing other
+                            goals. Travel with confidence, knowing your finances are secure.
                         </p>
                     </div>
                 </div>
@@ -171,9 +176,11 @@
                             <h2 class="card__title">Retirement</h2>
                             <img class="card__icon" src="assets/icons/retirement.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Prepare for a comfortable and secure retirement by investing in your
+                            golden years. Consistent
+                            contributions to your retirement fund ensure a stress-free life after work. A
+                            well-thought-out retirement plan safeguards your lifestyle and provides long-term peace of
+                            mind.
                         </p>
                     </div>
                 </div>
@@ -183,9 +190,10 @@
                             <h2 class="card__title">Marriage</h2>
                             <img class="card__icon" src="assets/icons/marriage.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Save for your or your loved ones' big day. Smart investments ensure a
+                            memorable wedding without compromising your financial goals. Investing for a wedding helps
+                            balance aspirations with long-term financial stability and
+                            ensures every detail of your special day is perfect.
                         </p>
                     </div>
                 </div>
@@ -195,9 +203,10 @@
                             <h2 class="card__title">Education</h2>
                             <img class="card__icon" src="assets/icons/education.svg">
                         </div>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p class="card__desc">Invest in lifelong learning or fund your family's education needs. A
+                            dedicated
+                            education fund empowers you to chase your ambitions without worry. Start early to ensure the
+                            best opportunities are always within reach for you and your loved ones.
                         </p>
                     </div>
                 </div>
@@ -214,37 +223,43 @@
                     <div class="feature-list__item">
                         <div class="feature-list__item-number">1</div>
                         <div class="feature-list__item-right">
-                            <h2 class="feature-list__item-title">Title</h2>
-                            <p class="feature-list__item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed
-                                do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2 class="feature-list__item-title">All-in-One Financial Tools</h2>
+                            <p class="feature-list__item-desc">Easily calculate RD, FD, and EMI details in one place,
+                                helping you make informed financial decisions quickly and efficiently.</p>
                         </div>
                     </div>
                     <div class="feature-list__item">
                         <div class="feature-list__item-number">2</div>
                         <div class="feature-list__item-right">
-                            <h2 class="feature-list__item-title">Title</h2>
-                            <p class="feature-list__item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed
-                                do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2 class="feature-list__item-title">Accurate and Reliable Calculations</h2>
+                            <p class="feature-list__item-desc">Our calculators provide precise and dependable results to
+                                help you plan your investments and loans confidently.</p>
                         </div>
                     </div>
                     <div class="feature-list__item">
                         <div class="feature-list__item-number">3</div>
                         <div class="feature-list__item-right">
-                            <h2 class="feature-list__item-title">Title</h2>
-                            <p class="feature-list__item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed
-                                do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h2 class="feature-list__item-title">Secure and Privacy-Focused</h2>
+                            <p class="feature-list__item-desc">Your data is never stored or shared, ensuring a safe and
+                                private user experience.</p>
+                        </div>
+                    </div>
+                    <div class="feature-list__item">
+                        <div class="feature-list__item-number">4</div>
+                        <div class="feature-list__item-right">
+                            <h2 class="feature-list__item-title">Clean and User-Friendly Interface</h2>
+                            <p class="feature-list__item-desc">Enjoy a seamless experience with a sleek design and
+                                intuitive navigation, allowing you to adjust principal amounts, interest rates, and
+                                tenure effortlessly to explore different scenarios and find the best financial
+                                plan.</p>
+                        </div>
+                    </div>
+                    <div class="feature-list__item">
+                        <div class="feature-list__item-number">5</div>
+                        <div class="feature-list__item-right">
+                            <h2 class="feature-list__item-title">Ad-Free Experience</h2>
+                            <p class="feature-list__item-desc">Focus entirely on your financial planning without
+                                interruptions or intrusive ads, making your journey smoother and stress-free.</p>
                         </div>
                     </div>
                 </div>
@@ -260,8 +275,10 @@
                     <div class="card">
                         <img class="card__icon" src="assets/icons/calculator.svg">
                         <h2 class="card__title">FD Calculator</h2>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card__desc">Explore our simple and reliable FD Calculator! Effortlessly compute the
+                            maturity amount and interest for your fixed deposits, helping you make informed investment
+                            decisions with ease.
+                        </p>
                         <a href="fd-calculator.html" class="card-link"><span class="card-link-text">Calculate
                                 Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
@@ -270,8 +287,9 @@
                     <div class="card">
                         <img class="card__icon" src="assets/icons/bank.svg">
                         <h2 class="card__title">RD Calculator</h2>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card__desc">Check out our easy-to-use RD Calculator! Plan your savings effectively by
+                            calculating the maturity amount and interest for your recurring deposits in just a few
+                            clicks.</p>
                         <a href="rd-calculator.html" class="card-link"><span class="card-link-text">Calculate
                                 Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
@@ -280,8 +298,9 @@
                     <div class="card">
                         <img class="card__icon" src="assets/icons/piggy-bank.svg">
                         <h2 class="card__title">EMI Calculator</h2>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card__desc">Try our convenient EMI Calculator! Quickly calculate your monthly
+                            installment amount and interest for loans, helping you plan your finances better and stay on
+                            track with your repayments.</p>
                         <a href="emi-calculator.html" class="card-link"><span class="card-link-text">Calculate
                                 Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
