--- a/emi-calculator.html
+++ b/emi-calculator.html
@@ -215,15 +215,17 @@
     </section>
     <section class="content-block" id="calculators">
         <div class="content-block-container">
-            <h2 class="content-block__title">Other Calculators</h2>
-            <p class="content-block__desc">Check out some other calculators</p>
+            <h2 class="content-block__title">Calculators</h2>
+            <p class="content-block__desc">Check out our calculators</p>
             <div class="cards">
                 <div class="card-container">
                     <div class="card">
-                        <img class="card__icon" src="assets/icons/bank.svg">
+                        <img class="card__icon" src="assets/icons/calculator.svg">
                         <h2 class="card__title">FD Calculator</h2>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card__desc">Explore our simple and reliable FD Calculator! Effortlessly compute the
+                            maturity amount and interest for your fixed deposits, helping you make informed investment
+                            decisions with ease.
+                        </p>
                         <a href="fd-calculator.html" class="card-link"><span class="card-link-text">Calculate
                                 Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
@@ -232,8 +234,9 @@
                     <div class="card">
                         <img class="card__icon" src="assets/icons/bank.svg">
                         <h2 class="card__title">RD Calculator</h2>
-                        <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card__desc">Check out our easy-to-use RD Calculator! Plan your savings effectively by
+                            calculating the maturity amount and interest for your recurring deposits in just a few
+                            clicks.</p>
                         <a href="rd-calculator.html" class="card-link"><span class="card-link-text">Calculate
                                 Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
