--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             class="footer__icon" src="assets/icons/resume.svg"></a>
                 </div>
                 <div class="footer__text">
-                    © Copyright. All rights reserved
+                    Created by <a href="https://github.com/karthik-2906">karthik-2906</a> © 2024
                 </div>
             </div>
         </div>
