--- a/rd-calculator.html
+++ b/rd-calculator.html
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                                 <div class="calculator__item-input-container">
-                                    <span class="calculator__item-icon">₹</span>
+                                    <span class="calculator__item-icon">₱</span>
                                     <input type="number" id="totalInvestmentInput" class="calculator__input-box"
                                         min="500" max="1000000" placeholder="0" value="50000">
                                 </div>
@@ -173,15 +173,15 @@
                     <div class="calculator__results-container">
                         <div class="calculator__results">
                             <p class="calculator__results-text">Invested Amount</p>
-                            <p class="calculator__results-number">₹ 18,00,000</p>
+                            <p class="calculator__results-number">₱ 18,00,000</p>
                         </div>
                         <div class="calculator__results">
                             <p class="calculator__results-text">Estimated Returns</p>
-                            <p class="calculator__results-number">₹ 32,500</p>
+                            <p class="calculator__results-number">₱ 32,500</p>
                         </div>
                         <div class="calculator__results">
                             <p class="calculator__results-text">Total Amount</p>
-                            <p class="calculator__results-number">₹ 1,32,500</p>
+                            <p class="calculator__results-number">₱ 1,32,500</p>
                         </div>
                     </div>
                 </div>
