Currency conversion to INR

--- a/emi-calculator.html
+++ b/emi-calculator.html
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                                 <div class="calculator__item-input-container">
-                                    <span class="calculator__item-icon">₱</span>
+                                    <span class="calculator__item-icon">₹</span>
                                     <input type="number" id="totalLoanInput" class="calculator__input-box" min="0"
                                         max="100000000" placeholder="0" value="1000000">
                                 </div>
@@ -173,19 +173,19 @@
                     <div class="calculator__results-container">
                         <div class="calculator__results">
                             <p class="calculator__results-text">Monthly EMI</p>
-                            <p class="calculator__results-number">₱ 1,00,000</p>
+                            <p class="calculator__results-number">₹ 1,00,000</p>
                         </div>
                         <div class="calculator__results">
                             <p class="calculator__results-text">Loan Amount</p>
-                            <p class="calculator__results-number">₱ 1,00,000</p>
+                            <p class="calculator__results-number">₹ 1,00,000</p>
                         </div>
                         <div class="calculator__results">
                             <p class="calculator__results-text">Interest</p>
-                            <p class="calculator__results-number">₱ 32,500</p>
+                            <p class="calculator__results-number">₹ 32,500</p>
                         </div>
                         <div class="calculator__results">
                             <p class="calculator__results-text">Total Amount</p>
-                            <p class="calculator__results-number">₱ 1,32,500</p>
+                            <p class="calculator__results-number">₹ 1,32,500</p>
                         </div>
                     </div>
                 </div>
